# retrofox

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  build.sh  readme.md
.github/workflows/: build.yml  main.yml
api-service/: CMakeLists.txt
api-service/include/: api-service.h  pythonenv.h  pythonfunctions.h  pythonref.h  pythonthread.h  pythonthreadcontroller.h
api-service/scripts/: baseapiservice.py  findgame.py  findgames.py  gamefilter.py  igdb.py  igdbapiservice.py  setupfunctions.py  testscript.py  thegamesdb.py  thegamesdbapiservice.py
api-service/src/: pythonenv.cpp  pythonfunctions.cpp  pythonmainthread.cpp  pythonref.cpp  pythonthreadcontroller.cpp
app/: CMakeLists.txt
app/resources/: assets.qrc  qml.qrc
app/resources/components/: Card.qml  Game.qml  GameInfo.qml  GameMenu.qml  GameView.qml  card.qml  main.qml
app/src/: executor.cpp  main.cpp
app/translations/: app_en_US.ts
core/: CMakeLists.txt
core/glsl/: fontfrag.glsl  fontvert.glsl
core/include/: Window.h  gamemenu.h  gamerunbutton.h  mainwindow.h  renderer.h  scraper.h  window.h
core/include/control/: virtualgamepad.h
core/include/graphics/: font.h  fontbuffer.h  label.h  sprite.h  text.h  texture.h  texturebuffer.h
core/include/interface/: button.h  label.h  labeledbutton.h  layout.cpp  layout.h  menu.h  paragraph.h  widget.h  window.h
core/src/: Window.cpp  gamemenu.cpp  gamerunbutton.cpp  main.cpp  mainwindow.cpp  renderer.cpp  scraper.cpp  window.cpp
core/src/control/: virtualgamepad.cpp
core/src/graphics/: font.cpp  fontbuffer.cpp  label.cpp  sprite.cpp  text.cpp  texture.cpp  texturebuffer.cpp
core/src/interface/: Widget.cpp  button.cpp  label.cpp  labeledbutton.cpp  layout.cpp  menu.cpp  paragraph.cpp  widget.cpp  window.cpp
core/ui/: window.ui
database/: CMakeLists.txt
database/include/: connection.h  database.h  row.h  statement.h
database/include/database/: connection.h  row.h  statement.h
database/include/entities/: developer.h  emulator.h  extension.h  functions.h  game.h  gamedeveloper.h  gamegenre.h  gamepublisher.h  genre.h  platform.h  publisher.h  scraperdeveloper.h  scrapergame.h  scrapergenre.h  scraperpublisher.h
database/src/: connection.cpp  qmlinterface.cpp  row.cpp  statement.cpp
database/src/database/: connection.cpp  statement.cpp
database/src/entities/: developer.cpp  emulator.cpp  extension.cpp  functions.cpp  game.cpp  gamedeveloper.cpp  gamegenre.cpp  gamepulbisher.cpp  genre.cpp  platform.cpp  publisher.cpp  scraperdeveloper.cpp  scrapergame.cpp  scrapergenre.cpp  scraperpublisher.cpp
doc/: Architecture.docx
include/api-service/: api-service.h  pythonenv.h  pythonfunctions.h  pythonmainthread.h  pythonthreadcontroller.h
include/app/: executor.h
include/core/: gamemenu.h  gamerunbutton.h  mainwindow.h  scraper.h
include/core/graphics/: font.h  fontbuffer.h  sprite.h  text.h  texturebuffer.h
include/core/interface/: button.h  label.h  labeledbutton.h  layout.h  menu.h  paragraph.h  widget.h  window.h
include/database/: connection.h  database.h  qmlinterface.h
include/database/database/: statement.h
include/database/entities/: developer.h  emulator.h  extension.h  functions.h  game.h  gamedeveloper.h  gamegenre.h  gamepublisher.h  genre.h  (+6 more)
include/manager/: emulatoreditdialog.h  emulatorlistmodel.h  emulatorstablemodel.h  gameeditdialog.h  gamestablemodel.h  mainwindow.h  platformeditdialog.h  platformlistmodel.h  platformstablemodel.h  scraper.h
manager/: CMakeLists.txt  manager.pro  msvc_make.bat
manager/include/: aboutdialog.h  emulatoreditdialog.h  emulatorlistmodel.h  emulatorstablemodel.h  gameeditdialog.h  gamemenu.h  gamemenubutton.h  gamestablemodel.h  gamewindow.h  mainwindow.h  platformeditdialog.h  platformlistmodel.h  platformstablemodel.h  scraper.h
manager/include/gamesimportwizard/: dataprocessingpage.h  finalpage.h  gameselectpage.h  pages.h  pathselectpage.h  platformlistmodel.h  scrapertablemodel.h  shareddata.h  welcomepage.h  wizard.h
manager/include/scraper/: findgameinformation.h  findgamesinformation.h  functions.h  scanfolder.h
manager/resources/: resources.qrc
manager/src/: emulatoreditdialog.cpp  emulatorlistmodel.cpp  emulatorstablemodel.cpp  gameeditdialog.cpp  gamemenu.cpp  gamemenubutton.cpp  gamestablemodel.cpp  gamewindow.cpp  main.cpp  mainwindow.cpp  platformeditdialog.cpp  platformlistmodel.cpp  platformstablemodel.cpp  scraper.cpp
manager/src/additionalentities/: extendedplatform.cpp
manager/src/gamesimportwizard/: dataprocessingpage.cpp  finalpage.cpp  gameselectpage.cpp  pathselectpage.cpp  platformlistmodel.cpp  scrapertablemodel.cpp  shareddata.cpp  welcomepage.cpp  wizard.cpp
manager/src/scraper/: findgameinformation.cpp  findgamesinformation.cpp  functions.cpp  scanfolder.cpp
manager/translations/: manager_en_US.qm  manager_en_US.ts  manager_ru_RU.qm  manager_ru_RU.ts
manager/ts/: manager_en_US.qm  manager_en_US.ts  manager_ru_RU.qm  manager_ru_RU.ts
manager/ui/: aboutdialog.ui  emulatoreditdialog.ui  gameeditdialog.ui  gamewindow.ui  mainwindow.ui  platformeditdialog.ui
manager/ui/gamesimportwizard/: dataprocessingpage.ui  finalpage.ui  gameselectpage.ui  pathselectpage.ui  welcomepage.ui
old_cmake/core/: CMakeLists.txt
old_cmake/manager/: CMakeLists.txt
scripts/api-service/: setupfunctions.py
sln/: retrofox.sln
sln/api-service/: api-service.vcxproj  api-service.vcxproj.filters
sln/core/: core.vcxproj  core.vcxproj.filters  sqlite.db  testbase.db
sln/database/: database.vcxproj  database.vcxproj.filters
sln/manager/: manager.vcxproj  manager.vcxproj.filters
sln/tests/: tests.vcxproj
src/api-service/: pythonenv.cpp  pythonfunctions.cpp  pythonmainthread.cpp  pythonref.cpp  pythonthread.cpp  pythonthreadcontroller.cpp
src/core/: Window.cpp  gamemenu.cpp  gamerunbutton.cpp  main.cpp  mainwindow.cpp  scraper.cpp
src/manager/: aboutdialog.cpp  emulatorlistmodel.cpp  emulatorstablemodel.cpp  gameeditdialog.cpp  main.cpp  mainwindow.cpp  platformeditdialog.cpp
translations/manager/: manager_en_US.ts  manager_ru_RU.ts
(+53 files in other folders)
